name:                pipes-errors
version:             0.1
synopsis:            Lift monad transformers in `errors` for pipes
homepage:            https://github.com/jdnavarro/pipes-errors
license:             BSD3
license-file:        LICENSE
author:              Danny Navarro
maintainer:          j@dannynavarro.net
category:            Control, Monad, Pipes, Error Handling
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Pipes.Lift.EitherT
                       Pipes.Lift.EitherRT
  build-depends:       base >=4.6 && <4.8,
                       errors,
                       pipes
  default-language:    Haskell2010
  ghc-options:         -O2
